--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 	<script src="/app/controllers/roverController.js"></script>
 </head>
 <body>
-	<header>
+	<header id="">
 		<nav>
 			<ul>
 				<li><a ui-sref="home">Home</a></li>
