--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,14 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
 	<!-- COMPONENTS -->
 	<script src="/assets/libs/angular/angular.min.js"></script>
+	<script src="/assets/libs/angular-resource/angular-resource.min.js"></script>
 	<script src="/assets/libs/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="/assets/libs/jquery/dist/jquery.min.js"></script>
 	<!-- APP -->
 	<script src="/app/app.module.js"></script>
 	<script src="/app/app.config.js"></script>
+	<!-- FACTORIES -->
+	<script src="/app/factories/apodFactory.js"></script>
 	<!-- CONTROLLERS -->
 	<script src="/app/controllers/apodController.js"></script>
 	<script src="/app/controllers/foaasController.js"></script>
