Small fixes for beta

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,7 @@
 	<title>Allu - Harkkatyö</title>
 	<!-- STYLE -->
 	<link href="/assets/styles/style.css" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<!-- COMPONENTS -->
 	<script src="/assets/libs/angular/angular.min.js"></script>
 	<script src="/assets/libs/angular-resource/angular-resource.min.js"></script>
@@ -17,6 +16,7 @@
 	<script src="/app/app.config.js"></script>
 	<!-- FACTORIES -->
 	<script src="/app/factories/apodFactory.js"></script>
+	<script src="/app/factories/roverFactory.js"></script>
 	<!-- CONTROLLERS -->
 	<script src="/app/controllers/apodController.js"></script>
 	<script src="/app/controllers/foaasController.js"></script>
